--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="./p5.js"></script>
+        <script src="./p5.min.js"></script>
     </head>
     <body>
         <div id="app"></div>
